--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -8,3 +8,18 @@ body{
 .color_yellow:hover{
 	color:#c3ad39;
 }
+
+/*@media only screen and (min-width: 1001 == 1004px) {
+    .ym{
+	margin:150px 0px 0px 100px;}
+}
+@media only screen and (max-width: 1000 == 1004px) {
+    .ym{
+	margin:10px 0px 0px 0px;}
+}
+@media only screen and (max-width: 600 == 1004px) {
+    .ym{
+	margin:10px 0px 0px 150px;
+}
+}*/
+
