--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="doctors_appointment">
+    <wb-module deploy-name="registerDemo">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="doctors_appointment"/>
-        <property name="java-output-path" value="/doctors_appointment/build/classes"/>
+        <property name="context-root" value="registerDemo"/>
+        <property name="java-output-path" value="/registerDemo/build/classes"/>
     </wb-module>
 </project-modules>
